--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
             <div class="slideshow-container">
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <div class="mySlides fade">
-                    <img src="assets/novisad.png">
+                    <img src="assets/novisad.png" alt="novi sad">
                     <div class="text" style="text-align: center;">Novi Sad, Serbia</div>
                 </div>
                 <div class="mySlides fade">
-                    <img src="assets/amtsterdam.png">
+                    <img src="assets/amtsterdam.png" alt="amsterdam">
                     <div class="text" style="text-align: center;">Amsterdam, Netherlands</div>
                 </div>
                 <div class="mySlides fade">
-                    <img src="assets/bahamas.png">
+                    <img src="assets/bahamas.png" alt="bahamas">
                     <div class="text" style="text-align: center;">Bahamas</div>
                 </div>
 
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="tickets-row">
-                <img src="assets/icon cable.png" alt="bus">
+                <img src="assets/icon-cable.png" alt="bus">
                 <h3>City Hiking Tour (3 hours)</h3>
                 <p>Get onboard one of our Round City Cable Tour</p>
                 <div class="under-dots">
@@ -218,6 +218,7 @@
     <section class="form">
         <h1>Contact Us</h1>
 
+
         <div class="form-people">
             <img src="assets/tabletgirl.png" alt="tabletgirl">
             <img src="assets/readingguys.png" alt="readinguy">
@@ -301,9 +302,9 @@
                 <img src="assets/insta.png " alt="insta ">
                 <img src="assets/facebook.png " alt="facebook ">
             </div>
-
-            <p>&#169;Company Name All rights reserved.</p>
-
+            <div>
+                <p>&#169;Company Name All rights reserved.</p>
+            </div>
         </div>
 
     </footer>
